# cert-manager-plesk-webhook

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/config/: draft-release-config.yml
.github/workflows/: build-docker.yml  check.yml  conventional-commits.yml  draft-release.yml  release.yml
src/: http_server.rs  main.rs  plesk_api.rs  settings.rs
